--- a/src/css/variables.less
+++ b/src/css/variables.less
@@ -1,4 +1,5 @@
-@bodyBgColor: #383838;
-@contentBgColor: #434348;
-@textColor: #dcdcdc;
+@bodyBgColor: #0D0D0D;
+@contentBgColor: #2c2c2c;
+@textColor: #f0f0f0;
+@highlightColor: #1E90FF;
 @skillRateCircleColor: #ffffff;
